--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,9 @@
 @import url(./blocks/margin/margin.css);
 /* отступ инпута модалки с аватаром */
 @import url(./blocks/popup/__input/_type/popup__input_type_avatar.css);
+/* login */
+@import url(./blocks/login/login.css);
+@import url(./blocks/login/__title/login__title.css);
+@import url(./blocks/login/__form/login__form.css);
+@import url(./blocks/login/__input/login__input.css);
+@import url(./blocks/login/__button/login__button.css);
