--- a/src/index.css
+++ b/src/index.css
@@ -62,9 +62,15 @@
 @import url(./blocks/margin/margin.css);
 /* отступ инпута модалки с аватаром */
 @import url(./blocks/popup/__input/_type/popup__input_type_avatar.css);
-/* login */
+/* login-register */
 @import url(./blocks/login/login.css);
 @import url(./blocks/login/__title/login__title.css);
 @import url(./blocks/login/__form/login__form.css);
 @import url(./blocks/login/__input/login__input.css);
 @import url(./blocks/login/__button/login__button.css);
+@import url(./blocks/login/__text/login__text.css);
+@import url(./blocks/login/__link/login__link.css);
+/* модалка состояния регистрации */
+@import url(./blocks/popup/__container-registration/popup__container-registration.css);
+@import url(./blocks/popup/__registration-image/popup__registration-image.css);
+@import url(./blocks/popup/__registration-text/popup__registration-text.css);
