--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,33 @@
 @import url(./blocks/popup/__container-registration/popup__container-registration.css);
 @import url(./blocks/popup/__registration-image/popup__registration-image.css);
 @import url(./blocks/popup/__registration-text/popup__registration-text.css);
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header__wrapper {
+  display: flex;
+  margin-top: 6px;
+}
+
+.header__email {
+  padding: 0;
+  margin: 0;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0em;
+}
+
+.header__link {
+  padding: 0;
+  margin: 0 0 0 24px;
+  color: #a9a9a9;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-decoration: none;
+}
