--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -3,6 +3,8 @@
   padding-top: 45px;
   max-width: 880px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 899px) {
