--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 /* header */
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__wrapper/header__wrapper.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__link/header__link.css);
 /* profile */
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__wrapper/profile__wrapper.css);
@@ -74,33 +77,3 @@
 @import url(./blocks/popup/__container-registration/popup__container-registration.css);
 @import url(./blocks/popup/__registration-image/popup__registration-image.css);
 @import url(./blocks/popup/__registration-text/popup__registration-text.css);
-
-.header {
-  display: flex;
-  justify-content: space-between;
-}
-
-.header__wrapper {
-  display: flex;
-  margin-top: 6px;
-}
-
-.header__email {
-  padding: 0;
-  margin: 0;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 22px;
-  letter-spacing: 0em;
-}
-
-.header__link {
-  padding: 0;
-  margin: 0 0 0 24px;
-  color: #a9a9a9;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 22px;
-  letter-spacing: 0em;
-  text-decoration: none;
-}
