feat: верстка бургера под мобилку без логики

--- a/src/blocks/header/__wrapper/header__wrapper.css
+++ b/src/blocks/header/__wrapper/header__wrapper.css
@@ -1,4 +1,10 @@
 .header__wrapper {
   display: flex;
-  margin-top: 6px;
+  margin-top: 12px;
+}
+
+@media screen and (max-width: 500px) {
+  .header__wrapper {
+    display: none;
+  }
 }
