--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
 @import url(./blocks/header/__wrapper/header__wrapper.css);
 @import url(./blocks/header/__email/header__email.css);
 @import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__burger/header__burger.css);
+@import url(./blocks/header/__burger-line/header__burger-line.css);
 /* profile */
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__wrapper/profile__wrapper.css);
