feat: логика бургера, кривая верстка

--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -8,3 +8,9 @@
   letter-spacing: 0em;
   text-decoration: none;
 }
+
+@media screen and (max-width: 500px) {
+  .header__link {
+    margin: 0;
+  }
+}
