--- a/src/blocks/header/__wrapper/header__wrapper.css
+++ b/src/blocks/header/__wrapper/header__wrapper.css
@@ -1,10 +1,23 @@
 .header__wrapper {
   display: flex;
   margin-top: 12px;
+  transition: all 0.3s ease-out;
 }
 
 @media screen and (max-width: 500px) {
   .header__wrapper {
-    display: none;
+    align-items: center;
+    background-color: black;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    padding: 40px 0;
+    margin: 0;
+    position: absolute;
+    right: 0;
+    top: -160px;
+    width: 100%;
   }
 }
