--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -5,7 +5,7 @@
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   display: flex;
   justify-content: space-between;
-  transition: all 0.3s ease-out;
+  transition: all 0.3s linear;
 }
 
 @media screen and (max-width: 899px) {
@@ -17,6 +17,6 @@
 @media screen and (max-width: 500px) {
   .header {
     max-width: 100%;
-    padding: 45px 27px 0;
+    padding: 48px 27px 0;
   }
 }
