--- a/src/blocks/login/login.css
+++ b/src/blocks/login/login.css
@@ -1,8 +1,13 @@
 .login {
-  /* border: 1px solid; */
   margin: 0 auto;
   width: 358px;
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+
+@media screen and (max-width: 380px) {
+  .login {
+    width: calc(100% - 10px * 2);
+  }
 }
