--- a/src/blocks/header/__wrapper/header__wrapper.css
+++ b/src/blocks/header/__wrapper/header__wrapper.css
@@ -1,7 +1,7 @@
 .header__wrapper {
   display: flex;
   margin-top: 12px;
-  transition: all 0.3s ease-out;
+  transition: all 0.3s linear;
 }
 
 @media screen and (max-width: 500px) {
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     gap: 18px;
-    padding: 40px 0;
+    padding: 48px 0;
     margin: 0;
     position: absolute;
     right: 0;
